[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/Sprites/ui/main-menu/background.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/ui/main-menu/FEED ANIMALS.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/ui/main-menu/g.logo.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/ui/main-menu/Nexurion's new logo_white.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/ui/buttons/btn_play/btn_play_hover.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/ui/buttons/btn_play/btn_play_normal.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/ui/buttons/btn_options/btn_options_normal.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/ui/buttons/btn_play/btn_play_pressed.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/ui/buttons/btn_chars_choice/btn_chars_choice_normal.gif/btn_chars_choice_normal_cat.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/ui/buttons/btn_options/btn_options_pressed.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/ui/buttons/btn_chars_choice/btn_chars_choice_hover.gif/btn_chars_choice_hover_cat.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/ui/buttons/btn_chars_choice/btn_chars_choice_pressed.gif/btn_chars_choice_pressed_cat.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/ui/buttons/btn_options/btn_options_hover.png" type="Texture" id=13]
[ext_resource path="res://Scripts/GUI.gd" type="Script" id=14]
[ext_resource path="res://Assets/Fonts/Konstanting.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://Scenes/FPSMeter.tscn" type="PackedScene" id=16]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 15 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 22
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 15 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[node name="main_menu" type="Node"]

[node name="background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="glogo" type="Sprite" parent="."]
position = Vector2( 255.368, 369.758 )
texture = ExtResource( 3 )

[node name="FEED ANIMALS" type="Sprite" parent="."]
position = Vector2( 259.368, 169.758 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 21.1794
margin_top = 1068.53
margin_right = 206.179
margin_bottom = 1105.53
theme = SubResource( 2 )
text = "TECHNICAL DEMO"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nexurion\'s new logo_white" type="Sprite" parent="."]
position = Vector2( 391.368, 1079.76 )
texture = ExtResource( 4 )

[node name="GUI" type="CanvasLayer" parent="."]
script = ExtResource( 14 )

[node name="FPSMeter" parent="GUI" instance=ExtResource( 16 )]
theme = SubResource( 4 )

[node name="btn_chars_choice_touch" type="TouchScreenButton" parent="GUI"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 50.318, 692.619 )
normal = ExtResource( 9 )
pressed = ExtResource( 12 )

[node name="btn_options_touch" type="TouchScreenButton" parent="GUI"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 292.372, 692.619 )
normal = ExtResource( 7 )
pressed = ExtResource( 10 )

[node name="btn_play_touch" type="TouchScreenButton" parent="GUI"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 166.571, 512.301 )
normal = ExtResource( 6 )
pressed = ExtResource( 8 )

[node name="btn_chars_choice" type="TextureButton" parent="GUI"]
anchor_left = -0.00311449
anchor_right = -0.00311449
margin_left = 52.0
margin_top = 692.619
margin_right = 230.0
margin_bottom = 870.619
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_options" type="TextureButton" parent="GUI"]
anchor_left = -0.00311449
anchor_right = -0.00311449
margin_left = 294.054
margin_top = 692.619
margin_right = 472.054
margin_bottom = 870.619
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_play" type="TextureButton" parent="GUI"]
anchor_left = -0.00311449
anchor_right = -0.00311449
margin_left = 168.253
margin_top = 512.301
margin_right = 346.253
margin_bottom = 690.301
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
